--- a/slack/requirements.txt
+++ b/slack/requirements.txt
@@ -1,17 +1,46 @@
 annotated-types==0.7.0
 anyio==4.4.0
+appdirs==1.4.4
+attrs==24.2.0
+beautifulsoup4==4.12.3
+bs4==0.0.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
+click==8.1.7
+cssselect==1.2.0
 exceptiongroup==1.2.2
+fake-useragent==1.5.1
 fastapi==0.112.0
+h11==0.14.0
 idna==3.7
+importlib_metadata==8.2.0
+lxml==5.3.0
+outcome==1.3.0.post0
+parse==1.20.2
 pydantic==2.8.2
 pydantic_core==2.20.1
+pyee==11.1.0
+pyppeteer==2.0.0
+pyquery==2.0.0
+PySocks==1.7.1
 python-dotenv==1.0.1
 requests==2.32.3
+requests-html==0.10.0
+selenium==4.23.1
 slack_bolt==1.19.1
 slack_sdk==3.31.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.5
 starlette==0.37.2
+tqdm==4.66.5
+trio==0.26.2
+trio-websocket==0.11.1
 typing_extensions==4.12.2
-urllib3==2.2.2
+urllib3==1.26.19
+uvicorn==0.30.5
+w3lib==2.2.1
+websocket-client==1.8.0
+websockets==10.4
+wsproto==1.2.0
+zipp==3.20.0
